Fix tooltip z-index issue.

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -271,13 +271,14 @@ section .title-bg {
     transform: translate(-50%); 
 
     white-space: nowrap;
+    z-index: 9999;
 }
 
 [tooltip]:hover:before {        
     opacity : 1;
 
     background: white;
-    transform: translate(-50%, 85%);
+    transform: translate(-50%, 130%);
 }
 
 
